<resources>
    <string name="app_name">UNION-USER</string>
    <string name="using_font">Roboto</string>
    <string name="utama">Utama</string>
    <string name="vendor">Vendor</string>
    <string name="toko">Toko</string>
    <string name="ide">Ide</string>
    <string name="profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>