<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/utama_foreground"
        android:title="@string/utama"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/vendor_foreground"
        android:title="@string/vendor"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_shop"
        android:title="@string/toko"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_storyboard"
        android:title="@string/ide"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/ic_profile_user"
        android:title="@string/profil"/>
</menu>